--- a/src/posts/work/0001.md
+++ b/src/posts/work/0001.md
@@ -3,6 +3,7 @@ title: "Work 1 ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonum
 categories:
   - Allgemein
   - Beispiel 1
+  - category
 pubDate: 2022-12-03
 slug: work-1
 ---
