--- a/src/posts/home/0003.md
+++ b/src/posts/home/0003.md
@@ -2,6 +2,7 @@
 title: "Home 3 ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor"
 slug: post-3
 draft: false
+pubDate: 2022-12-01
 categories:
   - blabla
 ---
