--- a/src/posts/home/0001.md
+++ b/src/posts/home/0001.md
@@ -1,24 +1,12 @@
 ---
-title: "Meine ersten Erfahrungen mit einem Elektroauto"
+title: "Meine Erfahrungen mit einem Elektroauto"
 categories:
   - mobility
   - technology
-  - one-more
-  - category
-pubDate: 2022-12-03
-slug: post-1
+pubDate: 2022-12-11
+slug: meine-erfahrungen-mit-einem-elektroauto
 ---
 
-Home 1 ipsum dolor _sit amet, consetetur_ sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam [voluptua][leos-blog]. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, [consetetur sadipscing elitr][leos-blog], sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+Alle reden über Elektroautos wenn es um Mobilität geht. Und ob diese Antriebsart die Zukunft ist oder die Mobilitätswende verspricht, das vermag ich nicht zu beurteilen. Ich möchte in diesem Blogpost darüber berichten, welche Erfahrungen ich bisher mit meinem Elektroauto gemacht habe.
 
 <!-- excerpt -->
-
-Home 1 ipsum dolor sit **amet, consetetur sadipscing elitr**, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-
-Home 1 ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-
-```php
-test("test");
-```
-
-[leos-blog]: https://leonidlezner.de
