--- a/src/posts/work/0001.md
+++ b/src/posts/work/0001.md
@@ -1,11 +1,9 @@
 ---
-title: "Work 1 ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor"
+title: "Unterscheidung in Work/Life? Du bist doch derselbe Mensch!"
 categories:
-  - Allgemein
-  - Beispiel 1
-  - category
-pubDate: 2022-12-03
-slug: work-1
+  - Philosophie
+pubDate: 2022-12-10
+slug: unterscheidung-in-work-life
 ---
 
 Work 1 ipsum dolor _sit amet, consetetur_ sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. [Lorem ipsum dolor sit][1] amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
