--- a/src/posts/home/0002.md
+++ b/src/posts/home/0002.md
@@ -2,6 +2,7 @@
 title: "Home 2 ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor"
 pubDate: 2022-12-02
 slug: post-2
+draft: true
 categories:
   - category
 ---
