--- a/src/posts/home/0003.md
+++ b/src/posts/home/0003.md
@@ -1,7 +1,7 @@
 ---
 title: "Home 3 ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor"
 slug: post-3
-draft: false
+draft: true
 pubDate: 2022-12-01
 categories:
   - blabla
