--- a/src/posts/home/0001.md
+++ b/src/posts/home/0001.md
@@ -10,3 +10,25 @@ slug: meine-erfahrungen-mit-einem-elektroauto
 Alle reden über Elektroautos wenn es um Mobilität geht. Und ob diese Antriebsart die Zukunft ist oder die Mobilitätswende verspricht, das vermag ich nicht zu beurteilen. Ich möchte in diesem Blogpost darüber berichten, welche Erfahrungen ich bisher mit meinem Elektroauto gemacht habe.
 
 <!-- excerpt -->
+
+## Welches Auto?
+
+Alle Erfahrungen mit der Elektromobilität basieren auf den Fahrzeugen, die ich fahren konnte. Zum einen wäre das ein Renault Zoe aus dem lokalen Car Sharing. Da ich den Wagen jedoch immer an seiner Ladestation abstellen durfte, war das Thema mit dem Laden nie ein Problem.
+
+Das aktuelle Elektroauto, was ich fahre, ist ein [VW E-Up](https://www.volkswagen.de/de/modelle/e-up.html). Es ist ein kleines Stadtauto mit einer Reichweite, die dem Einsatzzweck entsprechend ausgelegt ist. Man kommt im städtischen Verkehr so um die 260 km weit, mit dem Komfort und Ladekapazität eines VW Ups. Im Grunde ein Verbrenner, was auf einen Elektroantrieb umgerüstet wurde (in Serie).
+
+## Fahrgefühl in der Stadt
+
+Ein Elektroauto hat ein hohes Drehmoment, welches von Anfang an verfügbar ist. Dementsprechend kann es echt gut beschleunigen und das ziemlich konstant. Zum einen weil man nicht schalten muss und zum anderen, weil solche Probleme wie [Turbolöcher](https://www.autotuning.de/was-ist-das-turboloch/) gar nicht gibt. Der E-Up hat rund 82 PS, welche bei einem Verbrenner wirklich keine berauschende Erfahrung wären. Bei einem Elektroauto fährt man auch mit 82 PS schon sportlich.
+
+Man ruckelt nicht von Gang zu Gang, sondern gleitet sanft auf gewünschte Geschwindigkeiten. Die ganze Fahrt ist angenehmer, ruhiger und gleichzeitig wendiger: Man kann jede Lücke erwischen, die nötige Kraft ist sofort da.
+
+Wie viele Elektroautos, hat auch der E-Up die Möglichkeit durch [Rekuperation](<https://de.wikipedia.org/wiki/Rekuperation_(Technik)>) fast zum Stillstand zu kommen. So kann man den Wagen mit nur einem Pedal fahren: Gas geben zum Beschleunigen, vom Gas gehen zum Bremsen. Die "richtige" Bremse kommt dann erst für den kompletten Stillstand zum Einsatz. Man kann den Wagen aber auch ohne Rekuperation gleiten lassen, was in einigen Situationen sinnvoller ist.
+
+Insgesamt ist das Fahrgefühl anders als bei einem Auto mit Verbrennungsmotor. Man gewöhnt sich jedoch schnell daran und will es gar nicht mehr missen.
+
+## Fahren auf der Autobahn
+
+## Laden
+
+## Fahren im Winter
