--- a/src/posts/home/0001.md
+++ b/src/posts/home/0001.md
@@ -19,15 +19,19 @@ Das aktuelle Elektroauto, was ich fahre, ist ein [VW E-Up](https://www.volkswage
 
 ## Fahrgefühl in der Stadt
 
-Ein Elektroauto hat ein hohes Drehmoment, welches von Anfang an verfügbar ist. Dementsprechend kann es echt gut beschleunigen und das ziemlich konstant. Zum einen weil man nicht schalten muss und zum anderen, weil solche Probleme wie [Turbolöcher](https://www.autotuning.de/was-ist-das-turboloch/) gar nicht gibt. Der E-Up hat rund 82 PS, welche bei einem Verbrenner wirklich keine berauschende Erfahrung wären. Bei einem Elektroauto fährt man auch mit 82 PS schon sportlich.
+Ein Elektroauto hat ein hohes Drehmoment, welches von Anfang an verfügbar ist. Dementsprechend kann es echt gut beschleunigen und das ziemlich konstant. Zum einen weil man nicht schalten muss und zum anderen, weil solche Probleme wie [Turbolöcher](https://www.autotuning.de/was-ist-das-turboloch/) gar nicht existieren. Der E-Up hat rund 82 PS, welche bei einem Verbrenner wirklich keine berauschende Erfahrung wären. Bei einem Elektroauto fährt man auch mit 82 PS schon sportlich. Man kann so einige Sportautos an der Ampel stehen lassen (außer es sind ebenfalls E-Autos).
 
 Man ruckelt nicht von Gang zu Gang, sondern gleitet sanft auf gewünschte Geschwindigkeiten. Die ganze Fahrt ist angenehmer, ruhiger und gleichzeitig wendiger: Man kann jede Lücke erwischen, die nötige Kraft ist sofort da.
 
-Wie viele Elektroautos, hat auch der E-Up die Möglichkeit durch [Rekuperation](<https://de.wikipedia.org/wiki/Rekuperation_(Technik)>) fast zum Stillstand zu kommen. So kann man den Wagen mit nur einem Pedal fahren: Gas geben zum Beschleunigen, vom Gas gehen zum Bremsen. Die "richtige" Bremse kommt dann erst für den kompletten Stillstand zum Einsatz. Man kann den Wagen aber auch ohne Rekuperation gleiten lassen, was in einigen Situationen sinnvoller ist.
+Wie viele Elektroautos, hat auch der E-Up die Möglichkeit durch [Rekuperation](<https://de.wikipedia.org/wiki/Rekuperation_(Technik)>) fast zum Stillstand zu kommen. So kann man den Wagen mit nur einem Pedal fahren: Gas geben zum Beschleunigen, vom Gas gehen zum Bremsen. Die "richtige" Bremse muss dann erst für den kompletten Stillstand zum Einsatz kommen. Der Wagen lässt sich aber auch ohne Rekuperation gleiten bzw. segeln, was in einigen Situationen sinnvoller ist.
 
 Insgesamt ist das Fahrgefühl anders als bei einem Auto mit Verbrennungsmotor. Man gewöhnt sich jedoch schnell daran und will es gar nicht mehr missen.
 
 ## Fahren auf der Autobahn
+
+Fahren auf der Autobahn ist an sich leiser, weil man ja kein Motorgeräusch hört. Allerdings sind die Reifengeräusche laut genug, damit es trotzdem störend wird. Das ist natürlich kein Problem des Elektroautos an sich, sondern eher der Fahrzeugklasse "Kleinstauto", zu welcher der E-Up nun mal zählt. So ist im Auto trotz eines vergleichbar mit fossilen Zwillingen hohen Preises, keine besonders gute Schalldämmung verbaut.
+
+Da der Wagen bei 135 km/h verriegelt ist, wird man auf der deutschen Autobahn gleich zu einer der langsamen Gurken. Und auch wenn die Überholvorgänge einigermaßen gut auch bei 120 km/h funktionieren, so sollte man sich sehr bewusst in die linke Spur begeben, denn bei 135 ist Schluss. Und sogar diese will man nicht ausreizen, der Verbrauch steigt stark an. Und so werden aus der maximalen Reichweite von 260 km plötzlich nur die Hälfte.
 
 ## Laden
 
