--- a/src/posts/home/0001.md
+++ b/src/posts/home/0001.md
@@ -35,4 +35,18 @@ Da der Wagen bei 135 km/h verriegelt ist, wird man auf der deutschen Autobahn gl
 
 ## Laden
 
+An sich ist das Laden des Elektroautos nicht schwer. Man hat irgendwo am Auto, bei dem E-Up hinten rechts, unter der Tankklappe, einen Anschluss über den geladen wird. Man E-Up kann über AC (Wechselstrom) und DC (Gleichstrom) laden. Dafür gibt es Ladesäulen, die entsprechend AC oder DC können. Die Ladesäulen mit DC haben ein eigenes Kabel mit Stecker. Für AC-Säulen hat man im Auto ein eigenes Kabel, welches vom Auto zur Säule verbunden wird. VW bietet auf der Seite einige Informationen dazu: [Wie kann ich mein E‑Auto laden?](https://www.volkswagen.de/de/elektrofahrzeuge/laden-und-reichweite/wie-kann-ich-laden.html).
+
+Laden per AC (Wechselstrom) geht bei dem E-Up langsamer, dafür gibt es mehr Ladesäulen für AC, der Akku wird geschont und etwas günstiger ist es auch. Man muss aber schon die doppelte Ladezeit einkalkulieren. Auf der Autobahn oder sonst wenn die Zeit zum Laden knapp ist, lade ich schnell mit DC nach.
+
+Im Fahrzeug und über die Smartphone-App von VW kann man sehen, wie lange noch geladen wird. Maximal kann der E-Up mit 7.2 kW AC und 37 kW DC laden. Das sind allerdings Maximalwerte. In der Realität wird meist langsamer geladen. Die tatsächliche Ladeleistung hängt von mehreren Faktoren ab: AC oder DC, vom aktuellen Ladestand des Akkus und der maximalen Ladeleistung der Ladesäule ab. Ist der Akkustand unter 80%, wird schnell geladen. Ab 80% sinkt die Ladeleistung.
+
 ## Fahren im Winter
+
+Wenn man gewohnt ist einen Verbrenner zu fahren, so wird man schon etwas überrascht auf die berechnete Restreichweite im Auto gucken, wenn man die Heizung im Winter anmacht. Bei Autos ohne Wärmepumpe wird die warme Luft durch elektrische Energie erzeugt und das geht enorm auf die Ladekapazität. Positiv ist, dass die Wärme sehr schnell kommt, also kann man auch etwas heizen und wieder ausschalten.
+
+Wenn die Heck- oder Frontscheibe zugefroren sind, hilft bei meinem E-Up die Scheibenheizung (auch die Vorderscheibe hat so kleine Drähte, die heizen). Man spart sich viel Arbeit und viel Energie des Akkus, da man nicht mehr über die Luft die Scheibe auftauen muss. Funktioniert bei zugefrorenen Seitenscheiben natürlich nicht..
+
+## Fahren im Sommer
+
+Haben den E-Up noch nicht so lange, erst seit Herbst. Ein Update hier folgt.
