--- a/src/posts/home/0001.md
+++ b/src/posts/home/0001.md
@@ -35,7 +35,7 @@ Da der Wagen bei 135 km/h verriegelt ist, wird man auf der deutschen Autobahn gl
 
 ## Laden
 
-An sich ist das Laden des Elektroautos nicht schwer. Man hat irgendwo am Auto, bei dem E-Up hinten rechts, unter der Tankklappe, einen Anschluss über den geladen wird. Man E-Up kann über AC (Wechselstrom) und DC (Gleichstrom) laden. Dafür gibt es Ladesäulen, die entsprechend AC oder DC können. Die Ladesäulen mit DC haben ein eigenes Kabel mit Stecker. Für AC-Säulen hat man im Auto ein eigenes Kabel, welches vom Auto zur Säule verbunden wird. VW bietet auf der Seite einige Informationen dazu: [Wie kann ich mein E‑Auto laden?](https://www.volkswagen.de/de/elektrofahrzeuge/laden-und-reichweite/wie-kann-ich-laden.html).
+An sich ist das Laden des Elektroautos nicht schwer. Man hat irgendwo am Auto, bei dem E-Up hinten rechts, unter der Tankklappe, einen Anschluss über den geladen wird. Mein E-Up kann über AC (Wechselstrom) und DC (Gleichstrom) laden. Dafür gibt es Ladesäulen, die entsprechend AC oder DC können. Die Ladesäulen mit DC haben ein eigenes Kabel mit Stecker. Für AC-Säulen hat man im Auto ein eigenes Kabel, welches vom Auto zur Säule verbunden wird. VW bietet auf der Seite einige Informationen dazu: [Wie kann ich mein E‑Auto laden?](https://www.volkswagen.de/de/elektrofahrzeuge/laden-und-reichweite/wie-kann-ich-laden.html).
 
 Laden per AC (Wechselstrom) geht bei dem E-Up langsamer, dafür gibt es mehr Ladesäulen für AC, der Akku wird geschont und etwas günstiger ist es auch. Man muss aber schon die doppelte Ladezeit einkalkulieren. Auf der Autobahn oder sonst wenn die Zeit zum Laden knapp ist, lade ich schnell mit DC nach.
 
