--- a/src/posts/work/0001.md
+++ b/src/posts/work/0001.md
@@ -6,12 +6,16 @@ pubDate: 2022-12-10
 slug: unterscheidung-in-work-life
 ---
 
-Work 1 ipsum dolor _sit amet, consetetur_ sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. [Lorem ipsum dolor sit][1] amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+Die Trennung zwischen Work und Life in diesem Blog basiert mehr auf thematischen Unterschieden, als auf der Zugehörigkeit der Themen zu dem jeweiligen Teil des Lebens. Einige Themen sind für mich Work, auch wenn ich mich damit in der Freizeit beschäftige. Wenn ich in meiner Freizeit an einem Artikel für den Blog "arbeite", ist es trotzdem meine Freizeit. Und wenn ich bei der Arbeit einen Rhetorikkurs belege, ist es eher meine persönliche Weiterentwicklung, auch wenn sie während der Arbeitszeit stattfindet. Die grenze zwischen Work und Life ist für mich gar nicht so einfach zu ziehen.
 
 <!-- excerpt -->
 
-Work 1 ipsum dolor sit **amet, consetetur sadipscing elitr**, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+Allgemein war ich früher der Auffassung, dass man nicht zwischen dem privaten und beruflichem Leben trennen sollte. Man ist ja schließlich dieselbe Person und den beruflichen Teil auszuklammern würde einen großen Teil des Lebens abwerten. Auch im Beruflichen sollte man sich verwirklichen und zum Teil der Person machen. Dem bin ich mir nicht mehr so sicher.
 
-Work 1 ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+Die Unterscheidung in Privatperson und Mitarbeiter ist für mich obsolet, wenn es ums Lernen und persönliche Entwicklung geht. Denn wir alle verfolgen unsere Karrieren und ein Job ist nur eine Station auf dem Wege zur Meisterhaftigkeit. Meine Profession ist ein Teil von mir, während der Arbeitszeit und in meiner Freizeit. Meine Interessen bleiben auch nach Feierabend bestehen, ich lese Bücher oder Blogs, schaue YouTube-Videos zu Themen, die mich auch im Beruf voranbringen (können). So gesehen, bin ich der gleiche Mensch, beruflich und privat.
 
-[1]:[https://google.de]
+Wo für mich die Verschmelzung zwischen Privat und Beruflich jedoch aufhören sollte, ist die alltägliche Beziehung zur Organisation und zum Unternehmen in Gänze. In einer Festanstellung gehen wir einen Vertrag ein, in dem wir unsere Arbeitszeit gegen das Geld eintauschen. Natürlich ist es auch unsere Lebenszeit, das ist jedoch für das Unternehmen und den einvernehmlichen Vertrag zwischen Arbeitnehmer und Arbeitgeber nicht von Bedeutung. Ich werde bezahlt, dafür muss ich Arbeitsleistung erbringen. Im Betrieb bin ich nicht der Privatmensch Leonid, sondern eine Rolle, die für die Ausführung von Arbeiten benötigt wird. Das klingt im ersten Augenblick negativ und entmenschlicht, dass wir als facettenreichen Persönlichkeiten auf unsere Rollen reduziert werden. Das entspricht jedoch der Realität und würde uns viele unangenehme Situationen ersparen, wenn wir den Arbeitgeber nicht als Familie und uns lediglich als Rollen sehen würden.
+
+Die Organisation Unternehmen ist keine Familie, zumindest nicht für die Angestellten. Wir gehen keine familiäre Bindung ein, sondern einen festen Vertrag. Wir werden bezahlt und müssen dafür auch etwas ableisten. Und wenn wir mehr leisten, als vereinbart wurde, erwarten wir eine entsprechende Gegenleistung. Bleibt diese aus, richten wir unser Handeln in der Zukunft nach dieser Erfahrung aus. Baut sich eine familiäre Beziehung in einem Unternehmen auf, so glauben die Mitarbeitenden, dass sie öfters "die Extrameile gehen sollten", weil es in einer Familie dazu gehört. Allerdings wird diese Annahme schnell enttäuscht, wenn das Unternehmen oder Führungskräfte die Extrameile nicht entsprechend belohnen.
+
+Daher sollte man sich schon nicht als den gleichen Menschen bei der Arbeit und im Privaten sehen. Denn die Beziehung zu der Außenwelt ist eine andere. Vertrauen, Bereitschaft bestimmte Extraleistungen zu erbringen, Umgang mit Emotionen - damit sollte man im beruflichen Kontext bewusst umgehen.
