Fixing the favicon

--- a/src/posts/work/0001.md
+++ b/src/posts/work/0001.md
@@ -1,7 +1,7 @@
 ---
 title: "Unterscheidung in Work/Life? Du bist doch derselbe Mensch!"
 categories:
-  - Philosophie
+  - hobby-philosoph
 pubDate: 2022-12-10
 slug: unterscheidung-in-work-life
 ---
