--- a/src/posts/home/0001.md
+++ b/src/posts/home/0001.md
@@ -15,7 +15,7 @@ Alle reden über Elektroautos wenn es um Mobilität geht. Und ob diese Antriebsa
 
 Alle Erfahrungen mit der Elektromobilität basieren auf den Fahrzeugen, die ich fahren konnte. Zum einen wäre das ein Renault Zoe aus dem lokalen Car Sharing. Da ich den Wagen jedoch immer an seiner Ladestation abstellen durfte, war das Thema mit dem Laden nie ein Problem.
 
-Das aktuelle Elektroauto, was ich fahre, ist ein [VW E-Up](https://www.volkswagen.de/de/modelle/e-up.html). Es ist ein kleines Stadtauto mit einer Reichweite, die dem Einsatzzweck entsprechend ausgelegt ist. Man kommt im städtischen Verkehr so um die 260 km weit, mit dem Komfort und Ladekapazität eines VW Ups. Im Grunde ein Verbrenner, was auf einen Elektroantrieb umgerüstet wurde (in Serie).
+Das aktuelle Elektroauto, was ich fahre, ist ein [VW E-Up](https://www.volkswagen.de/de/modelle/e-up.html). Es ist ein kleines Stadtauto mit einer Reichweite, die dem Einsatzzweck entsprechend ausgelegt ist. Man kommt im städtischen Verkehr so um die 260 km weit, mit dem Komfort und Ladevolumen eines VW Ups. Im Grunde ein Verbrenner, was auf einen Elektroantrieb umgerüstet wurde (in Serie).
 
 ## Fahrgefühl in der Stadt
 
