--- a/src/posts/work/0002.md
+++ b/src/posts/work/0002.md
@@ -1,16 +1,27 @@
 ---
-title: "Work 2 ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor"
-pubDate: 2022-11-03
-slug: work-2
-draft: true
+title: "Sammlung von Ressourcen zu Projekt- und Produktmanagement"
+categories:
+  - project-management
+  - product-management
+pubDate: 2023-01-15
+slug: product-management-bookmarks
+draft: false
 ---
 
-Work 2 ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+Auf dieser Seite sammle ich verschiedenste Ressourcen zu Projekt- sowie Produktmanagement. Die Sammlung ist sicherlich nicht vollständig und wird nach und nach erweitert.
+
+Ich empfehle die Blogs direkt in euren RSS-Reader einzutragen, um nichts zu verpassen, was die Autoren Neues veröffentlichen.
 
 <!-- excerpt -->
 
-```php
-test("test");
-```
+Fangen wir mit etwas Klassischem an:
 
-Work 2 ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+## Projektmanagement
+
+- [Projektmanagement Blog](https://pm-blog.com)
+- [Blog von Torben Blankertz](https://blankertz-pm.de)
+- [PM Blog auf Medium](https://medium.com/@pmblog)
+- [Abenteuer Projekte](https://abenteuer-projekte.de)
+- [PM Student](https://pmstudent.com)
+
+Wird laufend erweitert...
