--- a/src/posts/work/0002.md
+++ b/src/posts/work/0002.md
@@ -24,4 +24,10 @@ Fangen wir mit etwas Klassischem an:
 - [Abenteuer Projekte](https://abenteuer-projekte.de)
 - [PM Student](https://pmstudent.com)
 
+## Produktmanagement
+
+- [Age of Product](https://age-of-product.com)
+
+---
+
 Wird laufend erweitert...
