--- a/src/posts/work/0002.md
+++ b/src/posts/work/0002.md
@@ -24,9 +24,12 @@ Fangen wir mit etwas Klassischem an:
 - [Abenteuer Projekte](https://abenteuer-projekte.de)
 - [PM Student](https://pmstudent.com)
 
+Und da nicht alles ein Projekt ist, sondern ein Produkt, hier die Ressourcen zu Produktmanagement:
+
 ## Produktmanagement
 
 - [Age of Product](https://age-of-product.com)
+- [Produktwerker Podcast](https://produktwerker.de)
 
 ---
 
