--- a/src/posts/work/0003.md
+++ b/src/posts/work/0003.md
@@ -1,10 +1,46 @@
 ---
 title: "Projektdokumentation mit Confluence aufbauen"
 slug: project-documentation-with-confluence
-pubDate: 2023-01-15
+categories:
+  - documentation
+  - collaboration
+pubDate: 2023-01-16
 draft: true
 ---
 
-## Tutorials
+Einer der wichtigsten Erfolgsfaktoren von Projekten und Produkten ist Kommunikation. Und einer der Aspekte in Kommunikation ist die Dokumentation und schriftlicher kollaborativer Austausch im Team. Ich nutze dafür gerne Atlassian Confluence. Wobei jedes kollaborative Werkzeug dafür passen würde. Ziel ist eine gute Struktur, die die Auffindbarkeit von Informationen erleichtert.
+
+<!-- excerpt -->
+
+Als ersten Schritt muss man verstehen, wofür welche Zielgruppe die Dokumentation nutzen möchte. Zum Beispiel:
+
+- Als Projektleiter:in/Produktmanager:in möchte ich mein Produkt oder Projekt planen und regelkonform dokumentieren
+- Als Umsetzungsverantwortliche:r möchte ich schnell auf Anleitungen und Artikel zugreifen, die mich in der alltäglichen Arbeit unterstützen
+- Als Stakeholder möchte ich mir schnell einen Überblick über den aktuellen Stand des Projektes verschaffen
+
+**Stolperfalle**: Diese Anforderungen sollte man sich nicht "aus der Perspektive der Zielgruppe ausdenken", sondern konkret Vertreter:innen der Zielgruppen befragen.
+
+## Dokumentation planen
+
+Eine gute und vor allem aktiv genutzte Dokumentation braucht eine gute Informationsarchitektur, eine Landkarte, die die Navigation und die Suche nach Informationen erleichtert. Natürlich haben Organisationen, Teams und einzelne Personen da ihre Vorlieben und eine allgemeine Vorlage würde nicht viel nützen. Einige Kriterien können jedoch bei dem Aufbau helfen.
+
+### Zwecke der Dokumentation
+
+Ich betrachte bei der Dokumentation zwei verschiedene Zwecke, die bei der Planung betrachtet werden sollen:
+
+- Statische Dokumentation
+  - Projekthandbuch
+  - Freigabedokumente
+  - Release-Notes
+  - etc.
+- Dynamische Dokumentation
+  - Meeting-Notizen
+  - Retrospektiven
+  - Protokolle
+  - etc.
+
+## Quellen und Ressourcen
+
+Folgende Ressourcen haben mir bei der Recherche geholfen:
 
 - [Let's Structure Atlassian Confluence for Success – Best Practices – Livestream](https://www.youtube.com/watch?v=U-f523b2UkU)
