--- a/src/posts/work/0003.md
+++ b/src/posts/work/0003.md
@@ -39,6 +39,10 @@ Ich betrachte bei der Dokumentation zwei verschiedene Zwecke, die bei der Planun
   - Protokolle
   - etc.
 
+Statische Dokumentation wird seltener genutzt, kann daher stärker in Hierarchien strukturiert werden. Die dynamische Dokumentation wird für tägliche Zusammenarbeit eingesetzt, soll daher möglichst schnell erreichbar sein.
+
+## Empfehlung für eine Struktur
+
 ## Quellen und Ressourcen
 
 Folgende Ressourcen haben mir bei der Recherche geholfen:
