--- a/src/posts/work/0003.md
+++ b/src/posts/work/0003.md
@@ -12,7 +12,7 @@ Einer der wichtigsten Erfolgsfaktoren von Projekten und Produkten ist Kommunikat
 
 <!-- excerpt -->
 
-Als ersten Schritt muss man verstehen, wofür welche Zielgruppe die Dokumentation nutzen möchte. Zum Beispiel:
+Als ersten Schritt muss man verstehen, wofür welche Zielgruppe die Dokumentation nutzen möchte. Und welche dieser Zielgruppen im Fokus der Seite sein soll. Zum Beispiel:
 
 - Als Projektleiter:in/Produktmanager:in möchte ich mein Produkt oder Projekt planen und regelkonform dokumentieren
 - Als Umsetzungsverantwortliche:r möchte ich schnell auf Anleitungen und Artikel zugreifen, die mich in der alltäglichen Arbeit unterstützen
