--- a/src/posts/work/0002.md
+++ b/src/posts/work/0002.md
@@ -31,6 +31,10 @@ Und da nicht alles ein Projekt ist, sondern ein Produkt, hier die Ressourcen zu 
 - [Age of Product](https://age-of-product.com)
 - [Produktwerker Podcast](https://produktwerker.de)
 
+## Führung, Organisation etc.
+
+- [Blog von Marcus Raitner](https://fuehrung-erfahren.de)
+
 ---
 
 Wird laufend erweitert...
