--- a/src/posts/work/0002.md
+++ b/src/posts/work/0002.md
@@ -23,6 +23,7 @@ Fangen wir mit etwas Klassischem an:
 - [PM Blog auf Medium](https://medium.com/@pmblog)
 - [Abenteuer Projekte](https://abenteuer-projekte.de)
 - [PM Student](https://pmstudent.com)
+- [The Project Group](https://www.theprojectgroup.com/)
 
 Und da nicht alles ein Projekt ist, sondern ein Produkt, hier die Ressourcen zu Produktmanagement:
 
