--- a/src/posts/work/0003.md
+++ b/src/posts/work/0003.md
@@ -4,8 +4,8 @@ slug: project-documentation-with-confluence
 categories:
   - documentation
   - collaboration
-pubDate: 2023-01-16
-draft: true
+pubDate: 2023-01-19
+draft: false
 ---
 
 Einer der wichtigsten Erfolgsfaktoren von Projekten und Produkten ist Kommunikation. Und einer der Aspekte in Kommunikation ist die Dokumentation und schriftlicher kollaborativer Austausch im Team. Ich nutze dafür gerne Atlassian Confluence. Wobei jedes kollaborative Werkzeug dafür passen würde. Ziel ist eine gute Struktur, die die Auffindbarkeit von Informationen erleichtert.
@@ -42,6 +42,29 @@ Ich betrachte bei der Dokumentation zwei verschiedene Zwecke, die bei der Planun
 Statische Dokumentation wird seltener genutzt, kann daher stärker in Hierarchien strukturiert werden. Die dynamische Dokumentation wird für tägliche Zusammenarbeit eingesetzt, soll daher möglichst schnell erreichbar sein.
 
 ## Empfehlung für eine Struktur
+
+Inspiriert durch einige Blogs und Videos habe ich mich für eine bestimmte Struktur entschieden. Diese Struktur priorisiert das Umsetzungsteam als die primäre Zielgruppe. Denn diese arbeitet am meisten mit der Dokumentation und muss schnell und einfach zu den richtigen Informationen gelangen.
+
+```md
+- Team
+  - Decision Log
+  - Meeting Minutes
+  - Rituale und Guidelines
+  - Retrospektiven
+  - OPL (open point list)
+  - Stakeholder
+- Produkt
+  - Anforderungen
+  - Architektur
+  - Release
+  - Testing
+- Betrieb
+  - Service Plan
+  - Support
+  - Incident Management
+```
+
+Je weiter unten in dem Baum, desto weniger frequentiert werden die Seiten genutzt. Für den Anfang sollte man versuchen die Anzahl der Top-Ebenen möglichst gering zu halten und mit Bedacht erweitern. Die hierarchische Verschachtlung ist ebenfalls so flach wie möglich und so tief wie (unbedingt) nötig zu halten.
 
 ## Quellen und Ressourcen
 
