Fixing the mobile view

--- a/src/posts/home/0002.md
+++ b/src/posts/home/0002.md
@@ -2,7 +2,7 @@
 title: "Braucht man in der Stadt ein eigenes Auto?"
 pubDate: 2023-01-20
 slug: braucht-man-in-der-stadt-ein-eigenes-auto
-draft: false
+draft: true
 categories:
   - mobility
 ---
