--- a/src/posts/work/0003.md
+++ b/src/posts/work/0003.md
@@ -46,19 +46,19 @@ Statische Dokumentation wird seltener genutzt, kann daher stärker in Hierarchie
 Inspiriert durch einige Blogs und Videos habe ich mich für eine bestimmte Struktur entschieden. Diese Struktur priorisiert das Umsetzungsteam als die primäre Zielgruppe. Denn diese arbeitet am meisten mit der Dokumentation und muss schnell und einfach zu den richtigen Informationen gelangen.
 
 ```md
-- Team
+- 🧙🏻‍♀️ Team
   - Decision Log
   - Meeting Minutes
   - Rituale und Guidelines
   - Retrospektiven
   - OPL (open point list)
   - Stakeholder
-- Produkt
+- 🎁 Produkt
   - Anforderungen
   - Architektur
   - Release
   - Testing
-- Betrieb
+- 🏭 Betrieb
   - Service Plan
   - Support
   - Incident Management
