--- a/src/posts/work/0002.md
+++ b/src/posts/work/0002.md
@@ -31,6 +31,7 @@ Und da nicht alles ein Projekt ist, sondern ein Produkt, hier die Ressourcen zu 
 
 - [Age of Product](https://age-of-product.com)
 - [Produktwerker Podcast](https://produktwerker.de)
+- [Blog von Alexander Cowan](https://www.alexandercowan.com/)
 
 ## Führung, Organisation etc.
 
