--- a/src/posts/work/0004.md
+++ b/src/posts/work/0004.md
@@ -1,9 +1,23 @@
 ---
-title: "Bla"
-slug: bla
+title: "Produktmanagement ist kein Projektmanagement für Produkte"
+slug: produktmanagement-ist-kein-projektmanagement-fuer-produkte
 categories:
-  - documentation
-  - collaboration
+  - product-management
+  - project-management
 pubDate: 2023-01-29
-draft: true
+draft: false
 ---
+
+Den Satz konnte man echt oft von mir hören: "Wir haben hier keine Projekte, sondern Produkte. Also sind wir auch Produktmanager". Oder "Product Owner oder Product Manager, man kann die Rolle so oder so nennen". Das ist wirklich grober Unfug.
+
+<!-- excerpt -->
+
+Auch wenn _Produktmanagement_ gefühlt in jedem Unternehmen etwas Anderes bedeutet, ist das managen eines Produktes viel mehr, als die Verfolgung eines Plans bei der Umsetzung (das wäre Projektmanagement). Es ist auch kein Anforderungsmanagement und agile Entwicklung (das wäre die Aufgabe des Product Owners).
+
+Für ein erfolgreiches Produkt, muss Produktmanagement drei Dimensionen eines Produktes abdecken:
+
+- Attraktivität (UX)
+- Machbarkeit (Technik)
+- Rentabilität (Business)
+
+Produktmanagement bedeutet nicht ein Profi auf all drei Gebieten zu sein, sondern gut genug darin zu sein, um die Profis orchestrieren zu können. Die drei Seiten des Produktes gleichwertig als Teil der Produktentwicklung zu etablieren.
