--- a/src/posts/home/0002.md
+++ b/src/posts/home/0002.md
@@ -2,13 +2,27 @@
 title: "Braucht man in der Stadt ein eigenes Auto?"
 pubDate: 2023-01-20
 slug: braucht-man-in-der-stadt-ein-eigenes-auto
-draft: true
+draft: false
 categories:
   - mobility
 ---
 
 In den meisten Fällen eigentlich nicht. Kommt natürlich darauf an, in welchem Teil der Stadt und welche sonstige Infrastruktur einem zur Verfügung steht. Und wo man arbeitet und ob man zur Arbeit gut mit den Öffis kommt. Genauer betrachtet, sind schon so einige Voraussetzungen, die erfüllt sein müssen, damit der Verzicht auf ein eigenes Auto zu keinen Einbußen oder sogar zu Steigerung der Lebensqualität führt.
 
-Ich kann in diesem Artikel darüber berichten, wie es für mich war ohne ein eigenes Auto zu leben, dann wieder eins zu haben, jetzt wieder zu überlegen, ob ich es brauche...
+Ich kann in diesem Artikel darüber berichten, wie es für mich war ohne ein eigenes Auto zu leben. Dann wieder eins zu haben. Jetzt wieder zu überlegen, ob ich es brauche...
 
 <!-- excerpt -->
+
+## Braucht man wirklich ein eigenes Auto?
+
+Für oder gegen ein Auto sprechen nicht nur die rationalen Faktoren wie die verfügbare Infrastruktur. Sondern auch die emotionalen und scheinbaren Gründe. Denn Komfort und "Freiheit" sind eher emotionale Faktoren, auf die man entweder verzichten oder auch anders erreichen kann. Teilweise sind sie auch nur eingebildet: Komfort ist für mich auch gefahren zu werden (Bahn, Bus) statt selbst am Steuer zu sitzen. Die Freiheit ist nur solange da, wie auch Parkplätze verfügbar sind.
+
+In der Stadt ist die Menge der geparkten Fahrzeuge einfach riesig. Geht es ohne Auto hier nicht? Öffentliche Verkehrsmittel, Fahrrad und gute fußläufige Erreichbarkeit müssten eigentlich den Besitz eines eigenen Fahrzeugs obsolet machen. Ist es die Bequemlichkeit? Spätestens beim Parken ist es alles andere als bequem oder komfortabel, eher stressig und nervenaufreibend. Ist es der Status? Hier parken nicht nur große teure Autos (zum Glück!), sondern jede Menge Altmetall. Also eine alte Drecksschleuder draußen stehen lassen und kaum nutzen, weil man Angst hat keinen Parkplatz mehr in der Nähe zu bekommen? Alles andere als rational. Denn dafür könnte man sehr gut Car Sharing nutzen.
+
+Ein eigenes Auto in der Stadt ist die Einbildung eines Luxus, weil im Hinterkopf der Besitz eines Fahrzeugs immer noch ein Symbol des Wohlstands ist.
+
+## Hilfe, ich habe kein eigenes Auto!
+
+Wirklich, keine Übetreibung: Nach dem Verkauf des Autos habe ich Freiheit verspürt: Keine laufenden Kosten, keine Reparaturen, keine Parkplatzsuche, keine Sorgen um Vogelkot auf dem Autodach. Einbuße in der Mobilität? Kaum, es fährt nicht weit eine Bahn, ich kann das Fahrrad nehmen oder Car Sharing. Ja, etwas Flexibilität geht verloren, man muss sich an die Fahrpläne, Verfügbarkeit der Autos im Car Sharing halten. Die Umgewöhnung findet jedoch schnell statt.
+
+Aber was wenn wir für die ganze Woche einkaufen wollen? Machen wir auch mit dem Auto nicht. Wir haben genug Einkaufsmöglichkeiten, die man fußläufig erreichen kann. Die Parkplatzsuche würde mehr Zeit als der Einkauf benötigen. Und wenn wir für einen Festtag mehr einkaufen müssen, dann leihen wir uns ein Auto aus dem Car Sharing aus.
