--- a/src/posts/work/0005.md
+++ b/src/posts/work/0005.md
@@ -7,7 +7,7 @@ pubDate: 2023-02-05
 draft: false
 ---
 
-Wenn man Auto fährt und das Gas bzw. Strompedal drückt, wird man für gewöhnlich beschleunigen. Der Motor dreht schneller, die ganze Mechanik gibt das Drehmoment auf die Straße, das Auto wird beschleunigt. Wir als Person am Steuer beobachten die Umgebung, schätzen die Umweltbedingungen ab: Ist die Straße glatt? Steht mir etwas im Weg? Wahre ich in die richtige Richtung?
+Wenn man Auto fährt und das Gas bzw. Strompedal drückt, wird man für gewöhnlich beschleunigen. Der Motor dreht schneller, die ganze Mechanik gibt das Drehmoment auf die Straße, das Auto wird beschleunigt. Wir als Person am Steuer beobachten die Umgebung, schätzen die Umweltbedingungen ab: Ist die Straße glatt? Steht mir etwas im Weg? Fahre ich in die richtige Richtung?
 
 <!-- excerpt -->
 
